@@ -1048,6 +1048,10 @@ qboolean G_shrubbot_cmd_check(gentity_t *ent)
 			// Replace shortcuts
 			cmdLine = G_Shortcuts(ent, g_shrubbot_commands[i]->exec);
 
+			// pheno: replace [i] shortcut with player ID
+			cmdLine = Q_StrReplace( cmdLine, "[i]",
+				va( "%i", ent->client->ps.clientNum ) );
+
 			// Replace arguments
 			for (argIx = 1; argIx <= 9; argIx++) {
 				char arg[MAX_NAME_LENGTH];
